# us-equity-backtester

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  dashboard.html  pyproject.toml
.github/workflows/: ci.yml
src/equity_backtester/: __init__.py  bab.py  cli.py  costs.py  data.py  engine.py  factors.py  forecast.py  fundamentals.py  meta.py  metrics.py  portfolio.py  risk.py  signals.py  strategy.py  universe.py  walkforward.py
tests/: test_bab.py  test_costs.py  test_data.py  test_engine.py  test_factors.py  test_forecast.py  test_fundamentals.py  test_meta.py  test_metrics.py  test_pbo.py  test_portfolio.py  test_risk.py  test_signals.py  test_significance.py  test_strategy.py  test_universe.py  test_walkforward.py
